Fix grid issue on Edge for kontakt page
Grid row fraction at 1.5 was causing form on Edge broswer to look odd.

Changed it to 1fr which fixes that issue, but maintains layout on other browsers.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -592,7 +592,7 @@ button {
   display: -ms-grid;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 0.5fr 1.5fr;
+  grid-template-rows: 0.5fr 1fr;
   grid-gap: 5%;
 }
 
